--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link href="css/index.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -16,10 +17,26 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
+    <nav>
+         <div class="nav-wrapper blue-grey encabezado">
+           <a href="#" class="brand-logo left">
+             <div class="card">
+               <img src="media/logo.jpg" class="responsive-img logo">
+             </div>
+           </a>
+           <ul class="hide-on-med-and-down right">
+             <li  class="active btn btn-small teal waves-effect"><a href="index.html">Inicio</a></li>
+             <li class="btn btn-small teal waves-effect"><a href="#">Estuve en...</a></li>
+             <li class="btn btn-small teal waves-effect"><a href="#">Mejores viajes</a></li>
+             <li class="btn btn-small teal waves-effect"><a href="#">recomendaciones</a></li>
+           </ul>
+         </div>
+       </nav>
 
 
 
 
-    
+
+
   </body>
 </html>
