2do intento nav

--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+     <nav class="nav-extended">
+               <div class="nav-wrapper blue-grey darken-3 encabezado">
+                 <a href="#" class="brand-logo left">
+                   <div class="card  col s2 m2 l2 teal darken-4">
+                     <img src="media/logo.png" class="responsive-img logo  teal darken-4">
+                   </div>
+                 </a>
+                 <ul class="right hide-on-med-and-down">
+                   <li><a href="index.html" class=" btn btn-small teal darken-3 waves-effect btn-encabezado"><i class="material-icons left">class</i>Inicio</a></li>
+                   <li><a href="#" class="btn btn-small teal darken-3 waves-effect btn-encabezado"><i class="material-icons left">room</i>Estuve en...</a></li>
+                   <li><a href="#"  class="btn btn-small teal darken-3 waves-effect btn-encabezado"><i class="material-icons left">work</i>Mejores viajes</a></li>
+                   <li><a href="#" class="btn btn-small teal darken-3 waves-effect btn-encabezado"><i class="material-icons left">cloud</i>recomendaciones</a></li>
+                </ul>
+               </div>
+               <div class="nav-content blue-grey  darken-3">
 
-    <nav>
-         <div class="nav-wrapper blue-grey encabezado">
-           <a href="#" class="brand-logo left">
-             <div class="card">
-               <img src="media/logo.jpg" class="responsive-img logo">
-             </div>
-           </a>
-           <ul class="hide-on-med-and-down right">
-             <li  class="active btn btn-small teal waves-effect"><a href="index.html">Inicio</a></li>
-             <li class="btn btn-small teal waves-effect"><a href="#">Estuve en...</a></li>
-             <li class="btn btn-small teal waves-effect"><a href="#">Mejores viajes</a></li>
-             <li class="btn btn-small teal waves-effect"><a href="#">recomendaciones</a></li>
-           </ul>
-         </div>
-       </nav>
-
-
+                 <div class="col s11 offset-l3">
+                   <span class="nav-title">Recuerdos de Travesía</span>
+                 </div>
+               </div>
+             </nav>
 
 
 
