--- a/index.html
+++ b/index.html
@@ -16,30 +16,14 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-     <nav class="nav-extended">
-               <div class="nav-wrapper blue-grey darken-3 encabezado">
-                 <a href="#" class="brand-logo left">
-                   <div class="card  col s2 m2 l2 teal darken-4">
-                     <img src="media/logo.png" class="responsive-img logo  teal darken-4">
-                   </div>
-                 </a>
-                 <ul class="right hide-on-med-and-down">
-                   <li><a href="index.html" class=" btn btn-small teal darken-3 waves-effect btn-encabezado"><i class="material-icons left">class</i>Inicio</a></li>
-                   <li><a href="#" class="btn btn-small teal darken-3 waves-effect btn-encabezado"><i class="material-icons left">room</i>Estuve en...</a></li>
-                   <li><a href="#"  class="btn btn-small teal darken-3 waves-effect btn-encabezado"><i class="material-icons left">work</i>Mejores viajes</a></li>
-                   <li><a href="#" class="btn btn-small teal darken-3 waves-effect btn-encabezado"><i class="material-icons left">cloud</i>recomendaciones</a></li>
-                </ul>
-               </div>
-               <div class="nav-content blue-grey  darken-3">
+    <div class="row">
+      <div class="col s12">
+        <div class="">
 
-                 <div class="col s11 offset-l3">
-                   <span class="nav-title">Recuerdos de Travesía</span>
-                 </div>
-               </div>
-             </nav>
-
-
-
+        </div>
+        
+      </div>
+    </div>
 
   </body>
 </html>
