--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <div class="row">
-      <div class="col s12">
-        <div class="">
-
-        </div>
-        
+      <div class="col s3 yellow columna-encabezado"></div>
+      <div class="col s9 green columna-encabezado">
+          <div class="col s12 columna-subnavbar"></div>
+          <div class="col s12 columna-subnavbar"></div>
+          </div>
       </div>
     </div>
 
