--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+
     <div class="row">
       <div class="col s3 yellow columna-encabezado"></div>
       <div class="col s9 green columna-encabezado">
@@ -23,6 +24,14 @@
           <div class="col s12 columna-subnavbar"></div>
           </div>
       </div>
+    </div>
+
+    <div class="row">
+
+    </div>
+
+    <div class="row">
+
     </div>
 
   </body>
