--- a/index.html
+++ b/index.html
@@ -16,23 +16,34 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-
+<div class="container">
     <div class="row">
-      <div class="col s3 yellow columna-encabezado"></div>
-      <div class="col s9 green columna-encabezado">
+      <div class="col l1 hide-on-med-and-down columna-encabezado"></div>
+      <div class="col s12 m3 l2 columna-encabezado"></div>
+      <div class="col s12 m9 l9 columna-encabezado">
           <div class="col s12 columna-subnavbar"></div>
           <div class="col s12 columna-subnavbar"></div>
-          </div>
       </div>
     </div>
 
-    <div class="row">
 
+    <div class="row">
+      <div class="col s1 columna-contenido hide-on-med-and-down">
+        <div class="col m12 l12 columna-social"></div>
+        <div class="col m12 l12 columna-social"></div>
+        <div class="col m12 l12 columna-social"></div>
+        <div class="col m12 l12 columna-social"></div>
+        <div class="col m12 l12 columna-social"></div>
+      </div>
+      <div class="col s12 m4 l4 columna-contenido"></div>
+      <div class="col s12 m4 l4 columna-contenido"></div>
+      <div class="col s12 m3 l3 columna-contenido"></div>
     </div>
 
     <div class="row">
-
+      <div class="col s12 m9 l9  columna-footer"></div>
+      <div class="col s12 m3 l3  columna-footer"></div>
     </div>
-
+</div>
   </body>
 </html>
