esqueleto divs terminado

--- a/index.html
+++ b/index.html
@@ -35,13 +35,32 @@
         <div class="col m12 l12 columna-social"></div>
         <div class="col m12 l12 columna-social"></div>
       </div>
-      <div class="col s12 m4 l4 columna-contenido"></div>
-      <div class="col s12 m4 l4 columna-contenido"></div>
-      <div class="col s12 m3 l3 columna-contenido"></div>
+      <div class="col s12 m4 l4 columna-contenido">
+        <div class="row">
+          <div class="col s12 col1foto"></div>
+          <div class="col s12 col1foto"></div>
+        </div>
+      </div>
+      <div class="col s12 m4 l4 columna-contenido">
+        <div class="row">
+          <div class="col s12 col2foto"></div>
+        </div>
+      </div>
+      <div class="col s12 m3 l3 columna-contenido">
+        <div class="row">
+          <div class="col s12 col3-1foto"></div>
+          <div class="col s12 col3-2foto"></div>
+        </div>
+      </div>
     </div>
 
     <div class="row">
-      <div class="col s12 m9 l9  columna-footer"></div>
+      <div class="col s12 m9 l9  columna-footer">
+        <div class="row">
+          <div class="col s12 colentradas"></div>
+          <div class="col s12 colform"></div>
+        </div>
+      </div>
       <div class="col s12 m3 l3  columna-footer"></div>
     </div>
 </div>
