avances en header
cómo poner botones en el nav y cambiarlos por íconos en small only?

--- a/index.html
+++ b/index.html
@@ -19,10 +19,25 @@
 <div class="container">
     <div class="row">
       <div class="col l1 hide-on-med-and-down columna-encabezado"></div>
-      <div class="col s12 m3 l2 columna-encabezado"></div>
+      <div class="col s12 m3 l2 columna-encabezado">
+        <img src="media/logo.png" class="responsive-img">
+      </div>
       <div class="col s12 m9 l9 columna-encabezado">
-          <div class="col s12 columna-subnavbar"></div>
-          <div class="col s12 columna-subnavbar"></div>
+          <div class="col s12 columna-subnavbar">
+
+
+                 <ul class="right">
+                   <li><a href=""><i class="material-icons left ">store</i>Inicio</a></li>
+                   <li><a href=""><i class="material-icons left ">location_on</i>Estuve en...</a></li>
+                   <li><a href=""><i class="material-icons left ">star</i>Mejores viajes</a></li>
+                   <li><a href=""><i class="material-icons left ">work</i>Recomendaciones</a></li>
+                 </ul>
+
+             
+          </div>
+          <div class="col s12 columna-subnavbar">
+            <h5 class="white-text slogan">La felicidad es un lugar</h5>
+          </div>
       </div>
     </div>
 
