--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       </div>
       <div class="col s12 m9 l9 columna-encabezado">
           <div class="col s12 columna-subnavbar">
-
-
+            <nav>
+               <div class="nav-wrapper blue">
                  <ul class="right">
                    <li><a href=""><i class="material-icons left ">store</i>Inicio</a></li>
                    <li><a href=""><i class="material-icons left ">location_on</i>Estuve en...</a></li>
                    <li><a href=""><i class="material-icons left ">star</i>Mejores viajes</a></li>
                    <li><a href=""><i class="material-icons left ">work</i>Recomendaciones</a></li>
                  </ul>
-
-             
+               </div>
+             </nav>
           </div>
           <div class="col s12 columna-subnavbar">
             <h5 class="white-text slogan">La felicidad es un lugar</h5>
