--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
           <div class="col s12 columna-subnavbar">
             <nav>
                <div class="nav-wrapper blue">
-                 <ul class="right">
+                 <ul class="right hide-on-small-only">
                    <li><a href=""><i class="material-icons left ">store</i>Inicio</a></li>
                    <li><a href=""><i class="material-icons left ">location_on</i>Estuve en...</a></li>
                    <li><a href=""><i class="material-icons left ">star</i>Mejores viajes</a></li>
                    <li><a href=""><i class="material-icons left ">work</i>Recomendaciones</a></li>
+                 </ul>
+                 <ul class="center hide-on-med-and-up">
+                   <li><a href="#" class="btn-floating btn-small light-blue waves-effect"><i class="material-icons">store</i></a></li>
+                   <li><a href="#" class="btn-floating btn-small light-blue waves-effect"><i class="material-icons">location_on</i></a></li>
+                   <li><a href="#" class="btn-floating btn-small light-blue waves-effect"><i class="material-icons">star</i></a></li>
+                   <li><a href="#" class="btn-floating btn-small light-blue waves-effect"><i class="material-icons">work</i></a></li>
                  </ul>
                </div>
              </nav>
