--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link href="css/index.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Blog de viajes</title>
@@ -25,7 +25,7 @@
       <div class="col s12 m9 l9 columna-encabezado">
           <div class="col s12 columna-subnavbar">
             <nav>
-               <div class="nav-wrapper blue">
+               <div class="nav-wrapper blue darken-4">
                  <ul class="right hide-on-small-only">
                    <li><a href=""><i class="material-icons left ">store</i>Inicio</a></li>
                    <li><a href=""><i class="material-icons left ">location_on</i>Estuve en...</a></li>
@@ -50,11 +50,21 @@
 
     <div class="row">
       <div class="col s1 columna-contenido hide-on-med-and-down">
-        <div class="col m12 l12 columna-social"></div>
-        <div class="col m12 l12 columna-social"></div>
-        <div class="col m12 l12 columna-social"></div>
-        <div class="col m12 l12 columna-social"></div>
-        <div class="col m12 l12 columna-social"></div>
+        <div class="col m12 l12 columna-social">
+          <a href="#" class="btn-floating blue darken-4 waves-effect"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+        </div>
+        <div class="col m12 l12 columna-social">
+          <a href="#" class="btn-floating blue darken-4 waves-effect"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+        </div>
+        <div class="col m12 l12 columna-social">
+          <a href="#" class="btn-floating blue darken-4 waves-effect"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+        </div>
+        <div class="col m12 l12 columna-social">
+          <a href="#" class="btn-floating blue darken-4 waves-effect"><i class="fa fa-pinterest-square fa-3x" aria-hidden="true"></i></a>
+        </div>
+        <div class="col m12 l12 columna-social">
+          <a href="#" class="btn-floating blue darken-4 waves-effect"><i class="fa fa-youtube fa-3x" aria-hidden="true"></i></a>
+        </div>
       </div>
       <div class="col s12 m4 l4 columna-contenido">
         <div class="row">
