fotos sin marco, listas

--- a/index.html
+++ b/index.html
@@ -66,21 +66,32 @@
           <a href="#" class="btn-floating blue darken-4 waves-effect"><i class="fa fa-youtube fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
+
       <div class="col s12 m4 l4 columna-contenido">
         <div class="row">
-          <div class="col s12 col1foto"></div>
-          <div class="col s12 col1foto"></div>
+          <div class="col s12 col1foto">
+            <img src="media/01muelle.jpg" class="responsive-img">
+          </div>
+          <div class="col s12 col1foto">
+            <img src="media/02muralla.jpg" class="responsive-img">
+          </div>
         </div>
       </div>
       <div class="col s12 m4 l4 columna-contenido">
         <div class="row">
-          <div class="col s12 col2foto"></div>
+          <div class="col s12 col2foto">
+            <img src="media/03cascada.jpg" class="responsive-img">
+          </div>
         </div>
       </div>
       <div class="col s12 m3 l3 columna-contenido">
         <div class="row">
-          <div class="col s12 col3-1foto"></div>
-          <div class="col s12 col3-2foto"></div>
+          <div class="col s12 col3-1foto">
+            <img src="media/04carretera.jpg" class="responsive-img">
+          </div>
+          <div class="col s12 col3-2foto">
+            <img src="media/05ruinas.jpg" class="responsive-img">
+          </div>
         </div>
       </div>
     </div>
