--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link href="css/index.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Blog de viajes</title>
@@ -25,9 +26,9 @@
       <div class="col s12 m9 l9 columna-encabezado">
           <div class="col s12 columna-subnavbar">
             <nav>
-               <div class="nav-wrapper blue darken-4">
+               <div class="nav-wrapper blue ">
                  <ul class="right hide-on-small-only">
-                   <li><a href=""><i class="material-icons left ">store</i>Inicio</a></li>
+                   <li><a href="" ><i class="material-icons left ">store</i>Inicio</a></li>
                    <li><a href=""><i class="material-icons left ">location_on</i>Estuve en...</a></li>
                    <li><a href=""><i class="material-icons left ">star</i>Mejores viajes</a></li>
                    <li><a href=""><i class="material-icons left ">work</i>Recomendaciones</a></li>
@@ -42,7 +43,7 @@
              </nav>
           </div>
           <div class="col s12 columna-subnavbar">
-            <h5 class="white-text slogan">La felicidad es un lugar</h5>
+            <h4 class="white-text slogan">La felicidad es un lugar</h4>
           </div>
       </div>
     </div>
@@ -70,27 +71,27 @@
       <div class="col s12 m4 l4 columna-contenido">
         <div class="row">
           <div class="col s12 col1foto">
-            <img src="media/01muelle.jpg" class="responsive-img">
+            <img src="media/01muelle.jpg" class="responsive-img z-depth-5">
           </div>
           <div class="col s12 col1foto">
-            <img src="media/02muralla.jpg" class="responsive-img">
+            <img src="media/02muralla.jpg" class="responsive-img z-depth-5">
           </div>
         </div>
       </div>
       <div class="col s12 m4 l4 columna-contenido">
         <div class="row">
           <div class="col s12 col2foto">
-            <img src="media/03cascada.jpg" class="responsive-img">
+            <img src="media/03cascada.jpg" class="responsive-img z-depth-5">
           </div>
         </div>
       </div>
       <div class="col s12 m3 l3 columna-contenido">
         <div class="row">
           <div class="col s12 col3-1foto">
-            <img src="media/04carretera.jpg" class="responsive-img">
+            <img src="media/04carretera.jpg" class="responsive-img z-depth-5">
           </div>
           <div class="col s12 col3-2foto">
-            <img src="media/05ruinas.jpg" class="responsive-img">
+            <img src="media/05ruinas.jpg" class="responsive-img z-depth-5">
           </div>
         </div>
       </div>
@@ -99,11 +100,67 @@
     <div class="row">
       <div class="col s12 m9 l9  columna-footer">
         <div class="row">
-          <div class="col s12 colentradas"></div>
-          <div class="col s12 colform"></div>
+          <div class="col s12 colentradas  blue lighten-5">
+            <div class="col s12 publicacion">
+              <div class="col s3">
+                <img src="media/Gallineral.jpg" alt="Parque el Gallineral" class="responsive-img img-publicacion">
+              </div>
+              <h5>Parque El Gallineral</h5>
+              <div class="chip">
+                  <i class="material-icons">today</i>
+                  Abril 4 de 2017
+              </div>
+              <div class="chip">
+                <i class="material-icons">room</i>
+                San Gil, Santander, Colombia
+              </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Aenean vitae posuere nisl, nec dictum magna. Suspendisse maximus nisi et ipsum cursus interdum. Ut rutrum auctor nisi, nec tincidunt tortor egestas quis. Quisque ultrices consequat diam, vel posuere elit dapibus vitae. Aenean aliquam placerat dictum. Integer cursus nulla id dui sagittis, a commodo diam malesuada. Fusce fringilla molestie posuere. Pellentesque in erat justo. Nullam massa arcu, vulputate non ex at, fringilla convallis mauris. Morbi aliquet est justo, id porta nibh consequat eu.</p>
+            </div>
+            <div class="col s12 publicacion">
+              <div class="col s3">
+                <img src="media/Barichara.jpg" alt="Barichara" class="responsive-img img-publicacion">
+              </div>
+              <h5>Barichara</h5>
+              <div class="chip">
+                  <i class="material-icons">today</i>
+                  Enero 10 de 2017
+              </div>
+              <div class="chip">
+                <i class="material-icons">room</i>
+                Barichara, Santander, Colombia
+              </div>
+              <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc vitae lacinia ante. Aenean ut augue semper, iaculis nisl vitae, auctor risus. Integer lobortis ipsum nisl, sed vulputate nibh laoreet at. Nulla non ultricies metus. Pellentesque vulputate dignissim vestibulum. Pellentesque pellentesque libero ut urna convallis efficitur. Praesent pellentesque rutrum ligula sit amet rutrum. Donec efficitur sem quis turpis fringilla placerat.</p>
+              <p>Proin quis lectus congue, euismod nisl id, placerat metus. Duis at ornare justo. Proin sed mattis purus. Maecenas finibus ante est, nec mattis arcu ultrices eu. Suspendisse tristique pulvinar velit, in semper ipsum vestibulum pulvinar. Nulla finibus, neque eget facilisis mollis, lorem tortor tincidunt urna, id condimentum neque ipsum vitae felis. Aliquam placerat dolor scelerisque dolor vestibulum, ac tristique lacus commodo. Fusce congue vitae libero id ultrices. Pellentesque risus justo, tempor quis nisi sit amet, gravida cursus elit. Morbi pharetra nulla metus, at pharetra tellus laoreet at. Donec pulvinar, elit vitae viverra egestas, leo arcu volutpat eros, eu molestie mauris mauris eget dui. Curabitur feugiat vehicula metus, a egestas urna cursus a. Morbi id enim nec justo finibus fringilla. Nulla interdum ligula a arcu sodales ultricies. Aenean bibendum libero quam, vitae imperdiet neque elementum id. Phasellus hendrerit turpis eu efficitur ullamcorper.</p>
+            </div>
+
+          </div>
+          <form class="" action="index.html" method="post">
+            <div class="col s12 colform blue">
+
+                <div class="row">
+                  <div class="input-field col s6">
+                    <i class="material-icons prefix icon-white">perm_identity</i>
+                    <input type="text" id="nombre" class="validate white-text" name="" value="">
+                    <label for="nombre" class="white-text">Nombre y Apellidos</label>
+                  </div>
+                  <div class="input-field col s6">
+                    <i class="material-icons prefix icon-white">email</i>
+                    <input id="email" type="email" class="validate white-text">
+                    <label for="email" data-success="Correcto" data-error="Debes completar este campo" class="white-text">E-mail</label>
+                  </div>
+                  <div class="input-field col s12">
+                    <i class="material-icons prefix icon-white">announcement</i>
+                    <textarea id="texto" class="materialize-textarea white-text"></textarea>
+                    <label for="texto" class="white-text">Comentarios</label>
+                  </div>
+                </div>
+
+            </div>
+          </form>
         </div>
       </div>
-      <div class="col s12 m3 l3  columna-footer"></div>
+      <div class="col s12 m3 l3  columna-acercade"></div>
     </div>
 </div>
   </body>
