Versión Final de Blog de Viajes en Materialize

--- a/index.html
+++ b/index.html
@@ -160,7 +160,18 @@
           </form>
         </div>
       </div>
-      <div class="col s12 m3 l3  columna-acercade"></div>
+      <div class="col s12 m3 l3  columna-acercade">
+        <div class="card">
+          <div class="author center-align">
+            <img src="media/autor.jpg" class="responsive-img circle">
+            <h5>Acerca del Autor</h5>
+            <p >Proin scelerisque metus enim, et fermentum tellus mollis quis. Quisque non venenatis dui. Fusce in tincidunt nisl, quis eleifend magna. Quisque scelerisque arcu elit, a porta leo varius at. Morbi porttitor metus ut sollicitudin pulvinar. Etiam nunc leo, ultricies ut nisl ultricies, rutrum suscipit libero. Etiam ut massa ut lectus molestie pulvinar.</p>
+          </div>
+
+
+        </div>
+
+      </div>
     </div>
 </div>
   </body>
